upload all files

--- a/products/pretreatment/acidclean.html
+++ b/products/pretreatment/acidclean.html
@@ -188,9 +188,7 @@
     <section class="card">
       <h2 class="section" data-i18n-key="intro_h">รายละเอียดผลิตภัณฑ์</h2>
       <p class="lead" data-i18n-key="intro_p">
-        Cleaner 105 เป็นสารทำความสะอาดสำหรับล้างคราบไขมันและสนิมบนผิวโลหะทั่วไป เหมาะกับการล้างแบบแช่โดยไม่ต้องใช้ความร้อน
-        มีสารช่วยรักษาผิวไม่ให้ถูกกัดกร่อน มีกลิ่นต่ำ และสามารถกำจัดคราบคาร์บอนจากงานเชื่อมหรือบัดกรีได้
-        สามารถใช้ร่วมกับกรดเกลือ/กรดกำมะถันเพื่อเพิ่มประสิทธิภาพการล้างคราบสนิมและคราบน้ำมัน
+ยาล้างไขมัน 105 เป็นน้ำยาเคมีสำหรับล้างคราบไขมันพร้อมทั้งกัดสนิมบนชิ้นงานโลหะทั่วไป เหมาะกับงานที่ต้องจุ่มแช่ล้างนานๆ โดยไม่ต้องใช้อุณหภูมิมาช่วย ดังนั้นผิวงานโลหะที่แช่ล้างน้ำยาล้างไขมันชนิดนี้ผิวจะไม่เสีย เนื่องจากมีส่วนผสมของสารเคมีที่ช่วยรักษาผิวงาน ขณะที่ทำงานจะมีกลิ่นน้อยอีกทั้งยังสามารถล้างคราบรอยไหม้คาร์บอนจากการเชื่อมหรือบัดกรีออกได้โดยง่าย น้ำยาเคมีนี้สามารถใช้ร่วมกับกรดเกลือและกรดกำมะถัน เพื่อเพิ่มประสิทธิภาพในการล้างคราบไขมันและกัดสนิมได้เร็วยิ่งขึ้น
       </p>
     </section>
 
@@ -336,7 +334,7 @@
         hero_title:"Cleaner 105 — ยาล้างไขมันสำหรับงานโลหะ",
         hero_tag:"ล้างคราบน้ำมัน/สนิมได้ดี ใช้แบบแช่ ไม่ต้องอุ่น ไม่ทำลายผิวโลหะ และมีกลิ่นต่ำ",
         intro_h:"รายละเอียดผลิตภัณฑ์",
-        intro_p:"Cleaner 105 เป็นสารทำความสะอาดสำหรับล้างคราบไขมันและสนิมบนผิวโลหะทั่วไป เหมาะกับการล้างแบบแช่โดยไม่ต้องใช้ความร้อน มีสารช่วยรักษาผิวไม่ให้ถูกกัดกร่อน มีกลิ่นต่ำ และสามารถกำจัดคราบคาร์บอนจากงานเชื่อมหรือบัดกรีได้ สามารถใช้ร่วมกับกรดเกลือ/กรดกำมะถันเพื่อเพิ่มประสิทธิภาพการล้างคราบสนิมและคราบน้ำมัน",
+        intro_p:"ยาล้างไขมัน 105 เป็นน้ำยาเคมีสำหรับล้างคราบไขมันพร้อมทั้งกัดสนิมบนชิ้นงานโลหะทั่วไป เหมาะกับงานที่ต้องจุ่มแช่ล้างนานๆ โดยไม่ต้องใช้อุณหภูมิมาช่วย ดังนั้นผิวงานโลหะที่แช่ล้างน้ำยาล้างไขมันชนิดนี้ผิวจะไม่เสีย เนื่องจากมีส่วนผสมของสารเคมีที่ช่วยรักษาผิวงาน ขณะที่ทำงานจะมีกลิ่นน้อยอีกทั้งยังสามารถล้างคราบรอยไหม้คาร์บอนจากการเชื่อมหรือบัดกรีออกได้โดยง่าย น้ำยาเคมีนี้สามารถใช้ร่วมกับกรดเกลือและกรดกำมะถัน เพื่อเพิ่มประสิทธิภาพในการล้างคราบไขมันและกัดสนิมได้เร็วยิ่งขึ้น",
         usage_h:"วิธีใช้งานแนะนำ",
         tbl_type:"ชนิดชิ้นงาน", tbl_c105:"Cleaner 105 (cc/L)", tbl_water:"น้ำสะอาด (cc/L)", tbl_acid:"กรดเกลือ/กรดกำมะถัน (cc/L)",
         row1_t:"คราบน้ำมัน/สิ่งสกปรกมาก", row2_t:"คราบน้ำมัน/สิ่งสกปรกปานกลาง", row3_t:"มีสนิมและน้ำมันร่วมกัน",
@@ -350,12 +348,12 @@
         mix_2:"เติมน้ำสะอาด 20 ลิตรลงถัง",
         mix_3:"ตวงกรดเกลือ 10 ลิตร (หรือกรดกำมะถัน 10 ลิตร) เติมช้า ๆ พร้อมกวน",
         mix_4:"เติมน้ำสะอาดเพิ่มอีก 10 ลิตร",
-        mix_5:"ตวง Cleaner 105 จำนวน 10 ลิตร และกวนให้เข้ากัน",
+        mix_5:"ตวง ยาล้างไขมัน 105 จำนวน 10 ลิตร และกวนให้เข้ากัน",
         maint_h:"การบำรุงรักษาน้ำยา",
         maint_p1:"เติมน้ำยาทดแทนเมื่อกำลังล้างลดลง (สังเกตฟองและความสะอาดผิว). หากมีตะกอนสะสมมากให้เทน้ำยาใสส่วนบนออก ทิ้งตะกอน และเติมน้ำยาชุดใหม่ตามอัตราส่วน",
         maint_p2:"หากใช้งานต่อเนื่องนานจนคุณภาพเสื่อม น้ำยาอาจข้นคล้ายเจลและมีสีคล้ำ ให้เปลี่ยนน้ำยาใหม่",
         maint_p3:"ควรรักษาความเข้มข้นด้วยการวิเคราะห์สม่ำเสมอและปรับเติมตามค่ามาตรฐานด้านล่าง",
-        std_h:"ค่ามาตรฐานของสารละลาย Cleaner 105",
+        std_h:"ค่ามาตรฐานของสารละลาย ยาล้างไขมัน 105",
         std_1:"ค่าโบเม่ของสารละลายพร้อมใช้: 10–12 °Bé (ความหนาแน่น 1.07–1.09)",
         std_2:"ค่า pH ของสารละลายพร้อมใช้: 1.90–2.20",
         std_3:"ความเข้มข้นของสารละลายพร้อมใช้: 10–40%",
