--- a/products/pretreatment/soakclean.html
+++ b/products/pretreatment/soakclean.html
@@ -341,13 +341,13 @@
         th:{ meta_title:"สารล้างไขมัน B1 / E60 (แบบแช่ & แบบไฟฟ้า) | Baume Chemical",
           hero_title:"สารล้างไขมัน B1 / E60 — แบบแช่ & แบบไฟฟ้า",
           hero_tag:"เลือกโหมดให้เหมาะกับชิ้นงาน คราบ และไลน์ผลิต: แช่/ต้ม/ถังกลิ้ง/อัลตร้าโซนิค (B1) หรือแยกด้วยไฟฟ้า (E60)",
-          b1_h:"Soak Cleaner B1", b1_p:"น้ำยากรดไขมันสำหรับล้างคราบน้ำมัน/สนิม ใช้ได้กับเหล็ก สแตนเลส และโลหะนอนเฟอร์รัส (ทองเหลือง ทองแดง สังกะสี ฯลฯ) รองรับโหมดแช่/ต้ม/ถังกลิ้ง/อัลตร้าโซนิค และช่วยขัดผิวก่อนชุบเมื่อใช้กับถังกลิ้ง",
-          b1_tbl1_h:"วิธีแช่/ต้ม (Boiling Soak)", col_type:"ชนิดชิ้นงาน", col_b1:"B1 (กรัม/ลิตร)", col_temp:"อุณหภูมิ (°C)", col_time:"เวลา (นาที)",
-          b1_row1_t:"เหล็ก/สแตนเลส", b1_row2_t:"ทองเหลือง/ทองแดง/สังกะสี", b1_note1:"*เวลาแช่ขึ้นกับสภาพชิ้นงานและระดับคราบ",
-          b1_tbl2_h:"วิธีถังกลิ้ง (Rolling)", b1_batch:"อัตราน้ำยา/แบทช์", b1_weight:"น้ำหนักชิ้นงาน (กก.)", b1_time:"เวลา (นาที)", b1_time_v:"20–60 หรือปรับตามต้องการ",
-          b1_eq_h:"อุปกรณ์แนะนำ", b1_eq_1:"ถังเหล็ก/สเตนเลสว่าง", b1_eq_2:"ฮีตเตอร์เหล็กหรือแก้วสำหรับให้ความร้อน", b1_eq_3:"กรณีถังกลิ้งควรใช้ถังเหล็กที่เหมาะสม",
-          b1_note_h:"หมายเหตุการใช้งานร่วมกัน", b1_note_a:"เหล็กและสแตนเลสใช้ถังร่วมกันได้", b1_note_b:"ทองแดงกับทองเหลืองใช้ถังร่วมกันได้", b1_note_c:"สังกะสีชุบและสังกะสีหลอม ใช้ร่วมกับตะกั่วสแลกได้",
-          e60_h:"Degreaser E60", e60_p:"น้ำยาล้างไขมันด้วยไฟฟ้า (Electro-degreasing) ทำความสะอาดคราบน้ำมัน/หล่อลื่นได้รวดเร็ว โดยชิ้นงานเป็นขั้วบวก ใช้ในงานชุบโลหะ ชิ้นส่วนอิเล็กทรอนิกส์ และไลน์ที่ต้องการประสิทธิภาพสูงโดยไม่ทำลายผิว",
+          b1_h:"Soak Cleaner B1", b1_p:"ยาต้มล้างไขมัน บี 1 เป็นยาต้มล้างไขมันแบบต้มแช่ แบบกลิ้งขัดสะอาดหรืออัลตร้าโซนิคบนงานเหล็กและโลหะที่ไม่ใช่เหล็ก อาทิ ทองเหลือง ทองแดง ขี้ตะกั่ว สแตนเลส มีคุณสมบัติล้างคราบน้ำมันและสนิมแดง ๆ รวมไปถึงรอยสะเก็ดรอยถลอกจากผิวงานอย่างมีประสิทธิภาพ",
+          b1_tbl1_h:"วิธีแช่/ต้ม", col_type:"ชนิดชิ้นงาน", col_b1:"B1 (กรัม/ลิตร)", col_temp:"อุณหภูมิ (°C)", col_time:"เวลา (นาที)",
+          b1_row1_t:"เหล็ก/สแตนเลส", b1_row2_t:"ทองเหลือง/ทองแดง/ซิงค์", b1_note1:"*เวลาแช่ขึ้นกับสภาพชิ้นงานและระดับคราบ",
+          b1_tbl2_h:"วิธีใช้ถังกลิ้ง", b1_batch:"อัตราน้ำยา", b1_weight:"น้ำหนักชิ้นงาน (กก.)", b1_time:"เวลา (นาที)", b1_time_v:"20–60 หรือปรับตามต้องการ",
+          b1_eq_h:"อุปกรณ์แนะนำ", b1_eq_1:"ถังเหล็ก/สเตนเลส", b1_eq_2:"ฮีตเตอร์เหล็กหรือแก้วสำหรับให้ความร้อน", b1_eq_3:"กรณีถังกลิ้งควรใช้ถังเหล็กที่เหมาะสม",
+          b1_note_h:"หมายเหตุการใช้งานร่วมกัน", b1_note_a:"เหล็กและสแตนเลสใช้ถังร่วมกันได้", b1_note_b:"ทองแดงกับทองเหลืองใช้ถังร่วมกันได้", b1_note_c:"งานซิงค์ฉีด ใช้ร่วมกับตะกั่วได้",
+          e60_h:"Degreaser E60", e60_p:"ยาแยกไฟฟ้า E-60 เป็นผงด่างปราศจากสารลดแรงตึงผิว ซึ่งประกอบด้วย ซิลิเกต, ฟอสเฟตและสารกำจัดสนิม ใช้สำหรับทำความสะอาดชิ้นงานโดยใช้ไฟฟ้าช่วยขจัดน้ำมันที่ฝังแน่นเกือบทุกประเภทที่ใช้ในกระบวนการแปรรูปโลหะได้ ผลิตภัณฑ์ทำความสะอาดคราบมันนี้ออกแบบมาเพื่อไม่ให้เกิดความเสียหายต่อชิ้นงานและเพื่อเพิ่มคุณภาพในการใช้งานควรใช้ร่วมกับ ยาล้างไขมันB1 (Soak clean B1) จะทำให้ล้างออกได้ง่ายและสามารถขจัดสนิมบาง ๆ ได้",
           e60_tbl_h:"เงื่อนไขการเดินบ่อ (แนะนำ)", e60_item:"รายการ", e60_val:"ค่าแนะนำ", e60_cur:"กระแสไฟ", e60_an:"ขั้วบวก", e60_an_v:"ชิ้นงาน", e60_ca:"ขั้วลบ", e60_ca_v:"แผ่นเหล็กดึงคราบ",
           e60_maint_h:"การบำรุงรักษา/การวิเคราะห์", e60_maint_p:"เติมทดแทนเมื่อเวลาล้างด้วยไฟฟ้าช้าลงหรือชิ้นงานไม่สะอาด ตรวจวิเคราะห์ความเข้มข้นและเติมส่วนที่ขาด",
           e60_ana_h:"วิธีวิเคราะห์", e60_a1:"ไพเปตน้ำยา E60 ปริมาตร 10 cc ลงขวดแก้ว 250 cc", e60_a2:"หยดสารชี้วัด Phenolphthalein 5 หยด", e60_a3:"ไทเทรตด้วยกรดเกลือ 1.00 M จนจากชมพูเป็นใสไร้สี",
